fix header overlapping content on very small screens

--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ iframe {
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: auto 130vw;
+    margin-top: 80px;
 }
 .section2 {
     background-color: #7D9883;
